Orchestration/lab17/nodejs-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      tolerations:
        - key: "node"
          operator: "Equal"
          value: "worker"
          effect: "NoSchedule"
      containers:
        - name: nodejs-app
          image: youssefmoghazy/nodejs-app-lab9
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "265Mi"
          volumeMounts:
            - name: nodejs-storage
              mountPath: /usr/src/app/data
      volumes:
        - name: nodejs-storage
          persistentVolumeClaim:
            claimName: nodejs-pvc
