Orchestration/lab17/nodejs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
spec:
  rules:
    - host: ndodejs.local
      http:
        paths:
          - path:
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 80
